Handful of SONAR recommended fixes